GNOME Bugzilla – Bug 75172
double-click on file three times for which no handler is available, crash on third try
Last modified: 2004-12-22 21:47:04 UTC
Package: nautilus Severity: normal Version: 1.1.9 Synopsis: double-click on file three times for which no handler is available, crash on third try Bugzilla-Product: nautilus Bugzilla-Component: File and Folder Operations BugBuddy-GnomeVersion: 2.0 (1.112.1) Description: Description of Problem: Double-click three times on a text file, for which no handler is currently available. Nautilus crashes on the third try. How often does this happen? Consitently repeatable. Debugging Information: [New Thread 1024 (LWP 1314)] [New Thread 2049 (LWP 1315)] [New Thread 1026 (LWP 1316)] [New Thread 2051 (LWP 1317)] 0x40a87ca9 in __wait4 () from /lib/i686/libc.so.6
+ Trace 19337
Thread 1 (Thread 1024 (LWP 1314))
------- Bug moved to this database by unknown@bugzilla.gnome.org 2002-03-17 18:38 ------- Unknown version 1.1.x in product nautilus. Setting version to the default, "unspecified". Reassigning to the default owner of the component, nautilus-maint@bugzilla.gnome.org.
*** Bug 75228 has been marked as a duplicate of this bug. ***
Confirming, since I found a duplicate. Note that duplicate is on Solaris. Upping severity. Crashes are bad. ;)
Should this be moved to bonobo?
*** Bug 76204 has been marked as a duplicate of this bug. ***
Note that the steps to trigger #76204 are completely different, but the stack trace appears identical: Steps to reproduce the problem: 1.Select the view-> View as 2. The View as window is opened . 3.Click on Modify button and select the option Include in the meunu just for guest (here guest is the folder name ) 4.Then Click Ok button . 5.Nautilus is crashed . Actual Results: Nautilus is crashign when you click on Ok .select the option properly without crashing. Expected Results: Nautilus should select the option properly without crashing.How often How often Does this happen? Always
Borderline urgent (because of duplicates), and possibly a bonobo problem. Can you guys take a look, michael and jacob?
Package: nautilus Severity: critical Version: 1.1.11 Synopsis: Nautilus crashes if it's tried to open plain text which isn't Unicode Bugzilla-Product: nautilus Bugzilla-Component: ??? BugBuddy-GnomeVersion: 2.0 (1.113.0) Description: Nautilus crashes Description of Problem: Nautilus crashes after retring several times to open a plain text for which gedit should be responsible as viewer. If I try to open this file dircetly with gedit it's refused to open it because it seems to be no Unicode. Steps to reproduce the problem: 1.Just try several times to open a simple Textfile (e.g. /etc/fstab) Actual Results: Crashing Expected Results: Refuse to open if no Viewer available, else view it. How often does this happen? Intermittent failure. Additional Information: This seems not to happen with e.g. .tar.gz, .rpm files! Debugging Info seems to be identical to to above reproted!
Fixed in CVS, patch sent to michael.
Actually this bug has 3 aspects. 1) The first was in bonobo-activation which has been patched 2) The second was the file-type capplet which has been patched 3) the third was in nautilus with a double free, patch sent to Darin.