http://bugzilla.gnome.org/show_bug.cgi?id=75172

2002-03-30  Jody Goldberg <jody@gnome.org>

	* bonobo-activation/bonobo-activation-activate.c
	(query_cache_insert) : Use g_hash_table_replace instead of _insert so
	  that if there is a collision both the old key & value get removed
	  rather than producing a frankenstein monster with the old key
	  pointing to the freshly deleted key.